[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[test]]
#name = "integration"
#path = "tests/cli.rs"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies]
assert_cli = "0.6.*"
rstest = "0.7.*"
serial_test = "0.5.*"
